frontend/k8s/k8s-deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: auction-frontend
        image: ankur2k19/auctions-system-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
